# bar-directory-recon

./: $null  .coverage  .coveragerc  .editorconfig  .env.asus  .env.example  .env.work  .flake8  .git.swp  .gitattributes  .gitguardian.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  .yamllint  ACE_RELAY_COMPLETION_REPORT.md  ACE_SYNC_COMPLETION.md  ACE_WORKFLOW_FEEDBACK.md  ALIENWARE_FOLLOW_UP_ANSWERS.md  ALIENWARE_HARDENING_COMPLETE_20250818.md  ALIENWARE_POST_HARDENING_CONFIRMATION.md  ALIENWARE_SSH_RETRY_RESULTS_20250813.md  ALIENWARE_SSH_TEST_RESULTS_20250813.md  ALIENWARE_SSH_VALIDATION_COMPLETE_20250813.md  ALIENWARE_SYNC_REPORT.md  ALI_BOOTSTRAP_ACCESS_GUIDE.md  ALI_COMPREHENSIVE_SESSION_RELAY.md  ALI_DEVCONTAINER_INTEGRATION_REPORT.md  ALI_KEY_IMPORT_COMPLETION_REPORT.md  ALI_KEY_IMPORT_STATUS_REPORT.md  ALI_RELAY_REPORT.md  ALI_RESPONSE_ENHANCED_SOLUTIONS.md  ALL_QUESTIONS_ANSWERED.md  ASUS_AI_Integration_Status.yaml  ASUS_Device_Sync_Report.md  ASUS_PARITY_FIX_SUMMARY.md  ASUS_SSH_TEST_RESULTS_20250813.md  ASUS_VALIDATION_COMPLETE.md  ASYNC_EXECUTION_PLAN.md  (+411 more)
.benchmarks/: README.md
.devcontainer/: Dockerfile  SETUP_NOTES.md  chrome-no-sandbox  devcontainer.json  setup.sh  validate_setup.py
.githooks/: block_main_branch.py  pre-commit-requirements
.github/: CODEOWNERS  ci-sentinel.md  dependabot.yml  labeler.yml  pull_request_template.md  secret-scanning.yml
.pytest_tmp/: test_emit_site_risk_jsoncurrent  test_load_validator_tierscurrent  test_pipeline_nonexistent_pdfcurrent  test_pipeline_successcurrent
.scripts/: apply_workflow_fixes_then_push.ps1  attach_and_finalize_attic_v2.ps1  commit_and_push_workflows.ps1  finalize_push_rebase.ps1  force_push_and_queue.ps1  rebase_resolve_pr201.ps1  resolve_pr201_conflicts.ps1  sync_with_remote_branch.ps1
.venv311/: pyvenv.cfg
.vscode_audit/: VSCode_Terminal_Audit_2025-08-27_15-37-37.md
archive/: ARCHIVE_MANIFEST.md  project_audit_report.json.bak
artifacts/: DataHunter_Configuration_Complete_Report.txt  branch_protection_oct8.json  enrichment_api_status_2025-07-09.txt  ga_gate_execution_log.txt  nov6_tasks_summary.md  rc1_windows_smoke.txt  security_bandit_report.json
automation/: QUEUE_NOTES.md  __init__.py  async_pipeline_executor.py  cli_shortcuts.py  config.template.yaml  config.yaml  config_models.py  cross_device_tasks.yaml  dashboard.py  enhanced_config_loader.py  enhanced_dashboard.py  notifier.py  ops_queue.ps1  ops_queue.py  pipeline_executor.py  run_cross_device_task.py  universal_runner.py
client_export_kit/: README-CLIENT.md  Run-Import.ps1  TROUBLESHOOTING.md
config/: data_hunter_config.json  device_config.json  device_profile.json  device_profile.json.bak.20250521_172339  lawyer_directory.json  logging.yaml  realtor_directory.json  test_config.json
configs/: fieldmap.yaml  ruleset.yaml  schema.yaml
constraints/: 2025-10-01.txt  2025-10-08.txt
docs/: ARCHITECTURE.md  BRANCH-PROTECTION.md  BRANCH_PROTECTION.md  CI_CHANGELOG.md  CI_GH_CLI_SCOPES.md  CODESPACES_DEVCONTAINER_RUNBOOK.md  CONFIGURATION.md  COPILOT_AUTO_CONFIRM_SETUP.md  COVERAGE_GROWTH_PLAN.md  CROSS_DEVICE_IMPLEMENTATION_REPORT.md  CROSS_DEVICE_IMPLEMENTATION_SUMMARY.md  DEPRECATIONS.md  DEVELOPMENT.md  DOCUMENTATION_CONSISTENCY_REPORT.md  FLIP_RUNBOOK_OCT8.md  GOOGLE_SHEETS_API_SETUP.md  GOOGLE_SHEETS_SETUP.md  INDEX.md  INTEGRITY_WORKSTREAM_STATUS.md  PHASE3_ROADMAP.md  PLUGINS.md  PROJECT_VISION.md  PROMOTION_RUNBOOK.md  README.md  README_phase_27.md  README_phase_28.md  RELEASE_QA.md  START_HERE.md  TEST_AUTHORING_COOKBOOK.md  architecture.md  branch-protection.md  cross_device_implementation_summary.yaml  integrations.md  phase_29_backlog.yaml  release-playbook.md  security.md  soft-launch.md  troubleshooting.md
examples/: gsheets_example.py  sample_leads.csv
flows/: git_auto_commit_flow.py
input/: README.md  config.csv  sites.json  snapshot.html  test_property_list_20250709_130000_test_city.csv
legacy_intake/: PLUGIN_REPORT.md  README.md  REPORT.md
list_discovery/: README.md  __init__.py  agent.py  config.template.yaml  config.yaml  demo.py  requirements.txt
logs/: downloaded_files.json  processing_suggestions_20250918_170608.txt  processing_suggestions_20250923_162652.txt
merge_conflicts_backup/: ai_template_indexer.py  audit_score_matrix_generator.py  auto_git_commit.py  auto_zip_archiver.py  backup_manager.py  batch_site_runner.py  cleanup_manager.py  cleanup_old_files.py  config_loader.py  daily_automation.py  domain_anomaly_flagger.py  email.py  email_summary_report.py  env_loader.py  field_ranker.py  fieldmap_domain_linter.py  generate_readme.py  git_commit_api.py  gmail_authenticator.py  gmail_notifier.py  google_sheets_updater.py  health_check.py  main.py  ml_labeler.py  motion_create_task.py  motion_task_via_email.py  notifier.py  plugin_aggregator.py  plugin_loader.py  plugin_registry_dashboard.py  project_path.py  recon1.py  recon_trend_tracker.py  record_field_validator_v3.py  run_phase_21b_analysis.py  scheduled_task_script.py  schema_dashboard_stub.py  schema_matrix_collector.py  schema_score_linter.py  score_predictor.py  (+13 more)
monitoring/: README.md  docker-compose.yml  doctor.ps1  prometheus.yml  refresh_ali_target.ps1  rules.yml
output/: recon_2025-03-04_16-52-01.json  recon_2025-03-04_16-57-36.json  recon_2025-03-13_16-20-37.json
outputs/: README.md  enhanced_processing_summary_2025-07-09_12-06-18.json  enhanced_processing_summary_2025-07-09_14-44-07.json  enhanced_processing_summary_2025-07-09_14-44-27.json  priority_leads.csv  processing_report_2025-07-09_12-07-17.txt  processing_summary_2025-07-09_12-07-17.json  realtor_leads_2025-07-01_11-40-27.csv  realtor_leads_test_2025-07-01_12-29-54.csv  realtor_leads_test_2025-07-01_13-04-03.csv  realtor_leads_test_2025-07-01_13-32-27.csv
phase_sync/: phase_manifest.yaml  plugin_test_harness.py  universal_prompt.md
planning/: README_phase_28.md  ada_relay.yaml  claude_sync_relay.yaml  director_phase28_sync.yaml  director_utilization.yaml  gitmo_relay.yaml  phase_28_execution_tracker.yaml  project_signal_relay.yaml  (+2 more)
(+1929 files in other folders)
