[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bar-directory-recon"
version = "0.1.3.dev0"
description = "Bar directory reconnaissance and automation tool for legal professional data extraction"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Samiat Quadir", email = "sam.quadir@gmail.com" }
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
(
  /\.venv.*
  |/merge_conflicts_backup/
  |/\.temp_conflicts/
  |/logs/
  |/archive/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
skip = [".venv311", "merge_conflicts_backup", ".temp_conflicts", "logs", "archive"]
known_first_party = ["src", "universal_recon"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Ignore line too long for now
exclude = [
    ".git",
    ".venv",
    ".venv311",
    "__pycache__",
    "build",
    "dist",
    "logs",
    "archive",
]

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true
exclude = [".venv", "logs", "archive"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
allow_untyped_defs = true
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_return_any = false
warn_unreachable = false
show_error_codes = true
exclude = [
    "archive/",
    "logs/",
    ".venv/",
    "tools/",
    "scripts/"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src --cov=universal_recon --cov-report=term-missing --cov-fail-under=25"
testpaths = [
    "src/tests",
    "universal_recon/tests"
]
markers = [
    "analytics: mark test as related to analytics modules"
]

[tool.coverage.run]
source = ["src", "universal_recon"]
omit = [
    "src/tests/*",
    "universal_recon/tests/*",
    "*/__pycache__/*",
    "*/test_*",
    "conftest.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
